--- a/sass/projects.scss
+++ b/sass/projects.scss
@@ -42,7 +42,6 @@
             // border: 1px solid red;
             display: flex;
             flex-direction: column;
-            columns: 1rem;
 
             @media screen and (min-width: $tablet-width) {
                 flex-direction: row;
