--- a/sass/tech-logos.scss
+++ b/sass/tech-logos.scss
@@ -19,3 +19,7 @@
 {
     scale: .75;
 }
+#material-ui-logo
+{
+    scale: .80;
+}
